--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container">
     <!-- Title -->
-    <h1 class="pt-5 title">MVSplat: Efficient 3D Gaussian Splatting from Sparse Multi-View Images</h1>
+    <h1 class="pt-5 title">TT_net</h1>
     <div class="d-flex flex-row justify-content-center">
       Anonymous Website
     </div>
