--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <div class="d-flex flex-row justify-content-center py-5">
       <figure>
         <img src="static/images/teaser.png" class="img-fluid teaser" alt="teaser image" />
-        <figcaption id="teaser-caption">MVSplat surpasses pixelSplat in appearance and geometry quality with 10&times; fewer parameters and
-        more than 2&times; faster inference speed.</figcaption>
+        <figcaption id="teaser-caption">TT net</figcaption>
       </figure>
     </div>
 
