--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <!-- TL;DR -->
     <h2>TL;DR</h2>
     <div class="alert alert-primary tldr mb-4">
-      MVSplat builds a cost volume representation to efficiently predict 3D Gaussians primitives from sparse
-      multi-view images in a single forward pass.
+      应该可以随便更改内容，视频还没尝试能不能更换，但是应该能
     </div>
 
     <!-- Abstract -->
